# SPACL-RRN

./: .dockerignore  .gitignore  A Novel Hybrid and Evolutionary Approach to Ontology Reasoning.md  ACCEPTANCE_NOTIFICATION.md  ACTUAL_BENCHMARK_RESULTS.md  AGENTS.md  BENCHMARK_SUMMARY.md  CHANGES_IMPLEMENTED.md  COMPLETION_REPORT.md  Cargo.toml  ETHICAL_CORRECTIONS_REPORT.md  FINAL_INTEGRATION_SUMMARY.md  LICENSE  MANUSCRIPT_REVISIONS.md  NOGOOD_AUDIT_FINDINGS.md  OWL2_DL_IMPLEMENTATION_ROADMAP.md  PAPER_HONESTY_UPDATES.md  PERFORMANCE_ROADMAP.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  REAL_WORLD_FINAL_RESULTS.md  REAL_WORLD_RESULTS.md  REVIEWER_RESPONSE_PACKAGE.md  REVISED_PLAN.md  SCOPE_FIXES_CHECKLIST.md  TEST_RESULTS_PARTIAL.md  VERIFICATION_STATUS.md  benchmark_tableau.py  benchmarking.rs  codebase_analysis.md  hierarchy_verify.sh  lib.rs  meta_reasoner.rs  novel_algorithm_design.md  quick_verify.sh  real_benchmark_results.json  run_real_benchmarks.py  simple_benchmark.rs  (+8 more)
archive/: enhanced_reasoning_bench.rs  transformation.rs
backup_tableauxx/: README.md  Tableau Algorithm Research Findings.md  benchmark_enhanced_reasoner.rs  enhanced_reasoner_standard_test.py  evolutionary.rs  lib.rs  main.rs  mod.rs  research_findings.md  saturation.rs  standard_ontology_test_results.json  รายงานการพัฒนา Tableau Reasoner สำหรับ ALC Description Logic.md
benches/: adaptive_threshold.rs  adaptive_with_unions.rs  comprehensive_real_world.rs  disjunctive_ontologies.rs  extreme_scale.rs  hierarchical_benchmark.rs  memory_tracking_bench.rs  nogood_effectiveness.rs  ontology_benchmark.rs  quick_benchmark.rs  quick_real_world.rs  real_world_benchmark.rs  real_world_benchmark.rs.old  real_world_ontologies.rs  scalability.rs  spacl_speedup_validation.rs  spacl_vs_sequential.rs
benchmarks/: BENCHMARK_SETUP_SUMMARY.md  download_ontologies.sh
docs/: BLOCKCHAIN_TRANSACTION_PROFILE_GUIDE.md  BRANCH_WORKFLOW.md  DIRECTORY_STRUCTURE.md  FINAL_STATUS.md  HIERARCHICAL_CLASSIFICATION_IMPLEMENTATION.md  LARGE_ONTOLOGY_OPTIMIZATION_PLAN.md  MODULE_ARCHITECTURE_EXP_HYBRID_RRN.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_SPACL_RRN.md  ROADMAP.md  SELF_REVIEW.md  SPACL_ALGORITHM.md
examples/: analyze_ontology.rs  benchmark_100k.rs  benchmark_compact_hierarchy.rs  benchmark_disjunctive.rs  benchmark_disjunctive_simple.rs  benchmark_grail.rs  benchmark_large.rs  benchmark_optimized.rs  check_disjunctions.rs  complete_benchmark.rs  debug_hierarchical_check.rs  hierarchical_demo.rs  inspect_axioms.rs  overnight_test.rs  quick_speedup_test.rs  quick_test_large_ontologies.rs  synthetic_hierarchy_benchmark.rs  test_branch_splitting.rs  test_go_basic_only.rs  test_grail_integration.rs  test_grail_real_world.rs  test_grail_with_progress.rs  test_hierarchical_lubm.rs  test_real_world_ontologies.rs  test_spacl.rs  test_spacl_large.rs  test_tuning.rs  verify_results.rs  verify_spacl.rs
paper/: ACADEMIC_INTEGRITY_WARNING.md  CHANGES_IMPLEMENTED.md  CHANGES_SUMMARY.md  FINAL_REVIEW.md  LICENSE  LIMITATIONS_LATEX_PATCH.tex  PROJECT_STATUS.md  README.md  RESULTS_LATEX_PATCH.tex  SUBMISSION_CHECKLIST.md  UPDATED_LIMITATIONS.md  UPDATED_RESULTS.md  VERIFICATION_GUIDE.md  main.md  main.tex
results/: BENCHMARK_EXECUTIVE_SUMMARY.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_FINAL_20260208.md  BENCHMARK_SUMMARY_2026.md  FINAL_VALIDATION_REPORT.md  FULL_BENCHMARK_ANALYSIS.md  IMPLEMENTATION_SESSION_SUMMARY.md  PAPER_WRITING_SUMMARY.md  REAL_WORLD_BENCHMARK_FAILURE_ANALYSIS.md  RESEARCH_VALIDATION_SUMMARY.md  SESSION_2_SUMMARY.md  UPDATED_BENCHMARK_RESULTS_20260207.md  benchmark_summary.md  enhanced_reasoner_benchmark.json  extracted_20260208_121224.md  extracted_20260208_131234.md  extracted_20260208_131247.md  hierarchy_verification_20260208_230433.txt  verification_20260208_230359.txt
scripts/: analyze_tableaux_performance.rs  benchmark_adaptive.rs  benchmark_edge_cases.rs  calibrate_adaptive.rs  check_paper_claim_integrity.sh  compare_benchmarks.sh  extract_benchmark_results.sh  gen_large_onto.py  generate_benchmark_report.sh  generate_disjunctive_functional.py  generate_disjunctive_ontology.py  generate_publish_safe_report.sh  list_benchmarks.sh  load_real_world_ontologies.rs  monitor_benchmark.sh  overnight_benchmark.sh  profile_large_parser.sh  run_all_paper_benchmarks.sh  run_benchmark.sh  run_benchmark_v2.sh  run_benchmarks.py  run_spacl_synthetic_ablation.rs  setup_rrn_remote.sh  start_overnight_benchmark.sh  tableau_reasoner.py  test_disjunctive_ontologies.rs  test_real_world_ontologies.rs  test_tableau_reasoner.py  (+3 more)
(+429 files in other folders)
